# wasi-test

./: .envrc  .gitignore  Cargo.toml  Makefile  README.md  Tiltfile  wasi-test.code-workspace
chart/: Chart.yaml  values.yaml
chart/templates/: deployment.yaml
crates/web_helpers/: Cargo.toml
crates/web_helpers/src/: lib.rs
crates/web_server/: Cargo.toml
crates/web_server/src/: lib.rs
docker/: go.Dockerfile  k3s-wasm.Dockerfile  node.Dockerfile  rust.Dockerfile  rust.Dockerfile.dockerignore  wasm.Dockerfile  wasm_aot.Dockerfile
golang/: .envrc  go.mod  main.go
load/: 50-users-1m.js  go-50-users-30s.js  node-50-users-30s.js  rust-50-users-1m.js  rust-50-users-30s.js  wasm-50-users-30s.js
node/: .npmrc  package.json
node/src/: server.js
rust/: Cargo.toml
src/: main.rs
src/helpers/: mod.rs
src/macros/: start.rs
src/server/: kill_signal.rs  mod.rs  server.rs  wait_for_kill.rs
