[package]
name = "wasm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
hyper_wasi = { version = "0.15", features = ["full"] }
tokio_wasi = { version = "1.25.1", features = ["full"] }
web_server = { path = "./crates/web_server" }
web_helpers = { path = "./crates/web_helpers" }

[[bin]]
name = "wasm"
path = "src/main.rs"

[profile.release]
lto = true
opt-level = "s"
