[package]
name = "wasm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1"
tokio_wasi = { version = "1.25.2", features = ["rt", "macros", "net", "time", "io-util"]}
warp_wasi = "0.3"

[[bin]]
name = "wasm"
path = "src/main.rs"

[profile.release]
lto = true
opt-level = "s"
